# PinePods

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.validator  Dockerfile.validator.postgres  ISSUE_DRAFT.md  README.md  bottomplaytest.py  build-all.sh  clientapi.py  completed_todos.md  create_user.py  customlogin.py  database.py  docker-compose.yml  dockerfile  dockerfile-arm  examplesearchout  fit_test.py  imageissue.py  layout.py  layouttest.py  loginexample.py  main.py  overlaytest.py  player.css  player.html  player.js  progress.py  progresstest.py  pypods.py  requirements.txt  run-tests.sh  scrubtest.py  setup-tests.sh  test-requirements.txt  testaudio.py  testimage.py  testmfa.py  testslider.py  (+3 more)
.github/: FUNDING.yml  dependabot.yml
Audio/: functions.py
Auth/: Passfunctions.py
Backend/: display.py  docker-compose.yml  dockerfile  pypods-apicall.py  pypodsapicall.py  requirements.txt  startup.sh  test.py  wsgi.py  xmlparser.py
Backend/pinepods_backend/: Cargo.toml
Backend/pinepods_backend/src/: main.rs
InternalFunctions/: searchpod.py  test.py
api_functions/: functions.py
app_functions/: functions.py
clients/: clientapi.py  postgre-clientapi.py
database_functions/: app_functions.py  auth_functions.py  db_client.py  functions.py  gpodder_router.py  import_progress.py  migrate.py  migration_definitions.py  migrations.py  mp3_metadata.py  oidc_state_manager.py  tasks.py  validate_database.py  valkey_client.py  websocket_broadcaster.py  youtube.py
docs/: CNAME  Pinepods-0.6.2.tgz  index.html  index.yaml  pinepods-0.6.2.tgz  pinepods-0.6.3.tgz  pinepods-0.6.4.tgz  pinepods-0.6.5.tgz  pinepods-0.6.6.tgz  pinepods-0.7.0.tgz  pinepods-0.7.1.tgz  pinepods-0.7.2.tgz  pinepods-0.7.3.tgz  pinepods-0.7.4.tgz  pinepods-0.7.5.tgz  pinepods-0.7.6.tgz  pinepods-0.7.7.tgz  pinepods-0.7.8.tgz  pinepods-0.8.1.tgz  pinepods-0.8.2.tgz  pinepods-0.9.0.tgz
gpodder-api/: go.mod  go.sum  start-gpodder.sh
helpers/: api.py  controls.py  settings.py  user.py
images/: manifest.json
imageserver/: docker-compose.yml  dockerfile  icecast.xml  image.py  requirements.txt  wsgi.py
internal_functions/: functions.py  modern-nav.py  navbar.py
metadata/: com.gooseberrydevelopment.pinepods.yml
mobile/: FUNDING.yml  LICENSE.BenHills  README.md  STORE_DEPLOYMENT.md  l10n.yaml  pubspec.yaml  todos
pinepods-ai/: Dockerfile  README.md  main.py  requirements.txt
rust-api/: Cargo.toml  openapi.json  redocly.yaml
rust-api/src/: config.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  openapi.rs  redis_client.rs  redis_manager.rs
rust-api/src/handlers/: async_tasks_examples.rs  auth.rs  collections.rs  episodes.rs  feed.rs  firewood.rs  health.rs  homepage.rs  local_podcast.rs  mod.rs  playlists.rs  podcasts.rs  proxy.rs  refresh.rs  saved_folders.rs  settings.rs  sync.rs  tasks.rs  users.rs  websocket.rs  youtube.rs
rust-api/src/services/: ad_detection.rs  ai_client.rs  ai_settings.rs  audio_processing.rs  auth.rs  download_metadata.rs  feeds.rs  homepage.rs  mod.rs  podcast.rs  recommendations.rs  scheduler.rs  task_manager.rs  tasks.rs  transcription.rs  url_guard.rs
rust-api/tests/: README.md  auth_coverage_test.rs  auth_endpoints_test.rs  episode_endpoints_test.rs  health_test.rs  podcast_endpoints_test.rs
rust-api/tests/common/: mod.rs
startup/: app_startup.sh  call_nightly_tasks.sh  call_refresh_endpoint.sh  fastapirouter.py  logging_config.ini  logging_config.py  nginx.conf  (+10 more)
web/: Cargo.toml  Trunk.toml  build.bat  build.ps1  build.sh  dev-info.md  index.html  tailwind.config.js
web/.cargo/: config.toml
web/src/: lib.rs  main.rs
web/src-tauri/: .gitignore  Cargo.toml  change-version.py  com.gooseberrydevelopment.pinepods.metainfo.xml  tauri.conf.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
web/src/.cargo/: config.toml
web/src/components/: app_drawer.rs  audio.rs  audio_player_bar.rs  click_events.rs  collection_picker_modal.rs  context.rs  context_menu_button.rs  desc_impl.rs  downloads.rs  downloads_tauri.rs  episode.rs  episode_list_item.rs  episode_list_view.rs  episodes_layout.rs  feed.rs  firewood_status.rs  gen_components.rs  gen_funcs.rs  history.rs  home.rs  host_component.rs  login.rs  login_tauri.rs  misc_func.rs  mod.rs  navigation.rs  notification_center.rs  oauth_callback.rs  people_subs.rs  person.rs  playlist_detail.rs  playlists.rs  podcast_layout.rs  podcasts.rs  queue.rs  queue_manage_modal.rs  queue_panel.rs  restore_overlay.rs  routes.rs  safehtml.rs  (+8 more)
web/src/components/setting_components/: ai_settings.rs  api_keys.rs  auto_delete_settings.rs  backup_server.rs  custom_feed.rs  custom_theme_creator.rs  download_settings.rs  email_settings.rs  export_settings.rs  firewood_players.rs  guest_settings.rs  import_options.rs  local_podcast.rs  mfa_settings.rs  mod.rs  nextcloud_options.rs  nextcloud_options_old.rs  notifications.rs  oidc.rs  playback_settings.rs  podcast_index_matching.rs  restore_server.rs  rss_feeds.rs  shared_links.rs  start_page_options.rs  theme_options.rs  transcription_settings.rs  user_self_service.rs  user_self_settings.rs  user_settings.rs
web/src/pages/: discover.rs  discover_hosts.rs  downloads.rs  downloads_tauri.rs  episode.rs  episode_layout.rs  feed.rs  history.rs  home.rs  internal_error.rs  login.rs  login_tauri.rs  mod.rs  not_found.rs  person.rs  playlist_detail.rs  playlists.rs  podcast_layout.rs  podcasts.rs  queue.rs  routes.rs  saved.rs  search.rs  settings.rs  shared_episode.rs  subscribed_people.rs  user_stats.rs  youtube_layout.rs
web/src/requests/: cache.rs  clip_reqs.rs  discover_req.rs  episode.rs  login_requests.rs  mod.rs  models.rs  people_req.rs  pod_req.rs  search_pods.rs  setting_reqs.rs  stat_reqs.rs  task_reqs.rs
web/src/tests/: mod.rs
web/src/translations/: bn.json  cs.json  da.json  de.json  en.json  eu.json  fr.json  hi.json  lt.json  nb.json  pl.json  pt.json  ru.json  sv.json  test.json
web/static/: js_func.js  manifest.json  styles.css  sw.js
web/static/assets/: phosphor.css
web/static/assets/icons/: material-icons.css
(+406 files in other folders)
