[package]
name = "pinepods-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"

[dependencies]
# Web Framework
axum = { version = "0.8.8", features = ["macros", "multipart", "ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.8", features = ["fs", "trace", "cors", "compression-gzip"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "mysql", "uuid", "chrono", "json", "bigdecimal"] }
bigdecimal = "0.4.10"

# Redis/Valkey
redis = { version = "1.0.4", features = ["aio", "tokio-comp"] }

# HTTP Client
reqwest = { version = "0.13.2", features = ["json", "stream", "cookies", "query", "form"] }

# Configuration and Environment
config = "0.15.19"
dotenvy = "0.15.7"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Utilities
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.0"
anyhow = "1.0.102"
thiserror = "2.0.18"
async-trait = "0.1.89"
base64 = "0.22.1"
lazy_static = "1.5.0"
urlencoding = "2.1.3"

# Authentication and Crypto
argon2 = "0.6.0-rc.7"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
rand = "0.10.0"

# MFA/TOTP Support
totp-rs = { version = "5.7.0", features = ["otpauth"] }
qrcode = "0.14.1"
image = "0.25.9"

# Encryption for sync credentials
fernet = "0.2.2"

# RSS/Feed Processing
feed-rs = "2.3.1"
url = "2.5.8"
regex = "1.12.3"

# Audio metadata tagging
id3 = "1.16.4"
mp3-metadata = "0.4.0"
quick-xml = "0.39.2"

# Email
lettre = { version = "0.11.19", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# CORS and Security
hyper = "1.8.1"

# Background Tasks and Task Management
tokio-cron-scheduler = "0.15.1"
tokio-stream = "0.1.11"
futures = "0.3.32"

# WebSocket Support (already in axum features)

# File handling
tokio-util = { version = "0.7.18", features = ["io"] }
mime_guess = "2.0.5"

[dev-dependencies]
tower-test = "0.4"