[package]
name = "web"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#trunk = "0.18.0"
#yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew = { version = "0.21.0", features = ["csr"] }
#yew = { "0.21.0", features = ["csr"] }
web-sys = { version = "0.3.82", features = [
    "CssStyleDeclaration",
    "DomTokenList",
    "HtmlSelectElement",
    "HtmlAudioElement",
    "DomRect",
    "Element",
    "HtmlAnchorElement",
    "FileReader",
    "PopStateEvent",
    "Blob",
    "Document",
    "Element",
    "NodeList",
    "Window",
    "XmlHttpRequest",
    "DomParser",
    "SupportedType",
    "Performance",
    "PerformanceNavigation",
    "DragEvent",
    "MutationObserver",
    "MutationObserverInit",
    "DataTransfer",
    "TouchEvent",
    "TouchList",
    "CacheStorage",
    "Cache",
    "Touch",
    "Clipboard",
    "Navigator",
    "MediaMetadata",
    "MediaSession",
    "MediaSessionAction",
    "Permissions",
    "MediaPositionState",
    "MediaSessionPlaybackState",
    "Crypto",
    "MouseEvent",
    "MouseEventInit",
    "CustomEvent",
] }
log = "0.4.28"
wasm-bindgen = "0.2.105"
yew-router = { version = "0.18.0" }
serde = { version = "1.0.225", features = ["derive"] }
gloo-net = { version = "0.6.0", features = ["websocket"] }
gloo = "0.11.0"
anyhow = { version = "1.0.99", features = [] }
wasm-bindgen-futures = "0.4.55"
gloo-timers = "0.3.0"
base64 = "0.22.1"
yewdux = "0.11.0"
rss = "2.0.12"
chrono = "0.4.42"
serde_json = "1.0.145"
yewtil = "0.4.0"
gloo-utils = "0.2.0"
gloo-events = "0.2.0"
md5 = "0.8.0"
ammonia = "4.1.1"
pulldown-cmark = "0.13.0"
async-std = "1.13.2"
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
rand = "0.9.2"
regex = "1.12.2"
js-sys = "0.3.82"
percent-encoding = "2.3.2"
data-encoding = "2.9.0"
url = "2.5.7"
serde-wasm-bindgen = "0.6.5"
chrono-tz = "0.10.4"
futures = "0.3.31"
futures-util = "0.3.31"
gloo-file = "0.3.0"
urlencoding = "2.1.3"
serde_with = "3.15.1"
htmlentity = "1.3.2"
i18nrs = { git = "https://github.com/madeofpendletonwool/i18n-rs", features = ["yew"] }

[features]
default = []
server_build = []

[profile.release]
lto = true

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
