[package]
name = "web"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#trunk = "0.18.0"
#yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew = { version = "0.23.0", features = ["csr"] }
#yew = { "0.21.0", features = ["csr"] }
web-sys = { version = "0.3.97", features = [
    "CssStyleDeclaration",
    "DomTokenList",
    "HtmlSelectElement",
    "HtmlAudioElement",
    "HtmlVideoElement",
    "HtmlMediaElement",
    "DomRect",
    "Element",
    "HtmlAnchorElement",
    "FileReader",
    "PopStateEvent",
    "Blob",
    "Document",
    "Element",
    "NodeList",
    "Window",
    "XmlHttpRequest",
    "DomParser",
    "SupportedType",
    "Performance",
    "PerformanceNavigation",
    "DragEvent",
    "MutationObserver",
    "MutationObserverInit",
    "DataTransfer",
    "TouchEvent",
    "TouchList",
    "CacheStorage",
    "Cache",
    "Touch",
    "Clipboard",
    "Navigator",
    "MediaMetadata",
    "MediaSession",
    "MediaSessionAction",
    "Permissions",
    "MediaPositionState",
    "MediaSessionPlaybackState",
    "Crypto",
    "MouseEvent",
    "MouseEventInit",
    "CustomEvent",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
] }
log = "0.4.29"
wasm-bindgen = "0.2.120"
yew-router = { version = "0.20.0" }
serde = { version = "1.0.225", features = ["derive"] }
gloo-net = { version = "0.7.0", features = ["websocket"] }
gloo = "0.12.0"
anyhow = { version = "1.0.102", features = [] }
wasm-bindgen-futures = "0.4.70"
gloo-timers = { version = "0.4.0", features = ["futures"] }
base64 = "0.22.1"
yewdux = "0.13"
rss = "2.0.12"
chrono = "0.4.44"
serde_json = "1.0.149"
gloo-utils = "0.3.0"
gloo-events = "0.3.0"
md5 = "0.8.0"
ammonia = "4.1.1"
pulldown-cmark = "0.13.3"
async-std = "1.13.2"
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
rand = "0.10.1"
regex = "1.12.3"
js-sys = "0.3.97"
percent-encoding = "2.3.2"
data-encoding = "2.11.0"
url = "2.5.8"
serde-wasm-bindgen = "0.6.5"
chrono-tz = "0.10.4"
futures = "0.3.32"
futures-util = "0.3.32"
gloo-file = "0.4.0"
urlencoding = "2.1.3"
serde_with = "3.18.0"
htmlentity = "1.3.2"
i18nrs = { git = "https://github.com/madeofpendletonwool/i18n-rs", features = ["yew"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
server_build = []

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
