[package]
name = "app"
version = "0.1.0"
description = "Pinepods-tauri"
authors = ["Gooseberry Development"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.2", features = ["tray-icon"] }
directories = "6.0.0"
dirs = "6.0.0"
# reqwest = { version = "0.12.5", features = ["blocking", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
ureq = "=3.1.2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
